--- a/public/css/main.css
+++ b/public/css/main.css
@@ -141,9 +141,10 @@ nav a:hover {
     background-size: cover;
 }
 h2{
-    font-size: 4.5em;
+    font-size: 3.5em;
+    font-family: 'Berkshire Swash', cursive;
     line-height: 1.2em;
-    color: #FFBE00;
+    color: #fff;
     text-shadow: 1px 1px 1px #fff;
     margin: 20px 0;
 }
